--- a/index.html
+++ b/index.html
@@ -390,6 +390,11 @@
               <ul class="mb-0" type="1" style="list-style-type:square">
                   <li>
                     <p>
+                      Morgan Klaus Scheuerman, Katy Weathington, Adrian Petterson, Dylan Thomas Doyle, <strong>Dipto Das</strong>, Michael Ann DeVito, Jed R. Brubaker. 2025. <a href="files/papers/TOCHI25_transphobia.pdf" target="_blank">Transphobia is in the Eye of the Prompter: Trans-Centered Perspectives on Large Language Models.</a> In <em>ACM Transactions on Computer-Human Interaction (TOCHI)</em>.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
                         Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
                         <a href="files/papers/JCSCW25_gig.pdf" target="_blank">Identity Alignment and the Sociotechnical Mechanisms of Reconfiguring Emotional Labor in Transnational Gig Education Platforms.</a> 
                         In <em>Computer Supported Cooperative Work: The Journal of Collaborative Computing and Work Practices (JCSCW)</em>.
