under review section added

--- a/index.html
+++ b/index.html
@@ -380,9 +380,36 @@
             <p>
               Please refer to my <a href="https://scholar.google.com/citations?hl=en&user=yRHRA4QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank" aria-label="Google Scholar">Google Scholar</a> page for a full list with citations.
             </p>
+
+            <div class="container-fluid">
+              <div class="subheading mb-3 text-primary">Under Review Manuscripts
+              </div>
+
+              <ul class="mb-0" type="1" style="list-style-type:square">
+                <li>
+                  <p>
+                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. <a href="files/papers/political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. Submitted.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <strong>Dipto Das</strong>, Achhiya Sultana, Ankit Singh Chauhan, Saadia Binte Alam, Mohammad Shidujaman, Sunandan Chakraborty, and Syed Ishtiaque Ahmed. 2025. <a href="files/papers/Mod_Guide.pdf" target="_blank">Can LLM-based Content Moderation Identify Insensitive Speech toward Indigenous Ethnic and Religious Minorities?</a>. Submitted.    
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. <a href="files/posters/BTPD.pdf" target="_blank">BTPD: A Multilingual Hand-curated Dataset of Bengali Transnational Political Discourse Across Online Communities</a>. Submitted.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <strong>Dipto Das</strong>, Shion Guha, and Bryan Semaan. 2025. <a href="files/papers/BSAdatasets.pdf" target="_blank">How do datasets, developers, and models affect biases in a low-resourced language?</a>. Submitted.
+                  </p>
+                </li>
+              </ul>
+            </div>
              
             <div class="container-fluid">
-
               <div class="subheading mb-3 text-primary">Peer-Reviewed Journal and Conference Papers
               </div>
               <!-- <ol class="mb-0" type="1" reversed> -->
@@ -390,7 +417,7 @@
               <ul class="mb-0" type="1" style="list-style-type:square">
                   <li>
                     <p>
-                      Morgan Klaus Scheuerman, Katy Weathington, Adrian Petterson, Dylan Thomas Doyle, <strong>Dipto Das</strong>, Michael Ann DeVito, Jed R. Brubaker. 2025. <a href="files/papers/TOCHI25_transphobia.pdf" target="_blank">Transphobia is in the Eye of the Prompter: Trans-Centered Perspectives on Large Language Models.</a> In <em>ACM Transactions on Computer-Human Interaction (TOCHI)</em>.
+                      Morgan Klaus Scheuerman, Katy Weathington, Adrian Petterson, Dylan Thomas Doyle, <strong>Dipto Das</strong>, Michael Ann DeVito, and Jed R. Brubaker. 2025. <a href="files/papers/TOCHI25_transphobia.pdf" target="_blank">Transphobia is in the Eye of the Prompter: Trans-Centered Perspectives on Large Language Models.</a> In <em>ACM Transactions on Computer-Human Interaction (TOCHI)</em>.
                     </p>
                   </li>
                   <li>
