--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             </p>
 
             <div class="container-fluid">
-              <div class="subheading mb-3 text-primary">Under Review Manuscripts
+              <div class="subheading mb-3 text-primary">Under Review Papers
               </div>
 
               <ul class="mb-0" type="1" style="list-style-type:square">
