--- a/index.html
+++ b/index.html
@@ -239,6 +239,10 @@
                 	<ul class="fa-ul mb-0 term-list">
                     <li class="term-item">
                       <i class="fa-li fas fa-pen-nib"></i>
+                      Received postdoctoral fellowship from Institute for Pandemics at the University of Toronto!
+                    </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-pen-nib"></i>
                       Invited talk at the University of Michigan.
                     </li>
                     <li class="term-item">
