--- a/index.html
+++ b/index.html
@@ -1076,6 +1076,9 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
+                Fall 2025: INFO 4609: User-Centered Design, University of Colorado Boulder
+              </li>
+              <li>
                 Spring 2025: INFO 2301: Quantitative Reasoning, University of Colorado Boulder
               </li>
               <li>
