--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                     <p>
                       <strong><a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a></strong>
                     </p>
+                    <p>
+                      <strong><a href="files/cv/Resume.pdf" target="_blank">Click here to download my brief Resume</a></strong>
+                    </p>
                   </div>
 
                   <div>
