--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="files/cv/CV.pdf" target="_blank">Curriculum Vitae &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="files/cv/Resume.pdf" target="_blank">Resume &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
+          </li>
         </ul>
       </div>
     </nav>
