--- a/index.html
+++ b/index.html
@@ -95,26 +95,29 @@
           </div>
           <div class="row mb-5">
             <div class="col-lg-8 col-md-8 col-sm-12">
+                <p class="subheading mb-3">
+                  I am currently on the job market for 2025-26, seeking opportunities as a Tenure-Track Assistant Professor or as a UX Researcher!
+                </p>
               	<p class="justify">
                   I am a Postdoctoral Fellow jointly appointed in the <a href="https://web.cs.toronto.edu" target="_blank">Department of Computer Science</a> (also affiliated with <a href="https://ischool.utoronto.ca/" target="_blank">iSchool</a>) at the <a href="https://www.utoronto.ca/" target="_blank">University of Toronto</a>, where I work with <a href="https://www.ishtiaque.net/" target="_blank">Syed Ishtiaque Ahmed</a> and <a href="https://shionguha.ca/" target="_blank">Shion Guha</a>. My research focuses on the intersection of Human-Computer Interaction (HCI), Social Computing, Human-Centered AI, Algorithmic Fairness and Bias, and Natural Language Processing (NLP).</p>
                 
-                  <p class="justify">
-                  Specifically, I conduct research on how people participate in social, political, and cultural discourse through online communities, how algorithmic systems (e.g., language models) shape users' interaction and experience in various contexts, and how we should conceptualize their ethics and fairness across different languages, social groups and underserved communities, political values, and cultural practices. My research has appeared at premier venues including ACM CHI, CSCW, and ICTD and been recognized with Best Paper Honorable Mentions and covered by prominent media outlets.</p>
+                <p class="justify">
+                Specifically, I conduct research on how people participate in social, political, and cultural discourse through online communities, how algorithmic systems (e.g., language models) shape users' interaction and experience in various contexts, and how we should conceptualize their ethics and fairness across different languages, social groups and underserved communities, political values, and cultural practices. My research has appeared at premier venues including ACM CHI, CSCW, and ICTD and been recognized with Best Paper Honorable Mentions and covered by prominent media outlets.</p>
 
-                  <p class="justify">I completed my PhD and MS in <a href="https://www.colorado.edu/cmci/infoscience" target="_blank">Information Science</a> from the University of Colorado Boulder, where I worked with <a href="https://www.colorado.edu/faculty/semaan/" target="_blank">Bryan Semaan</a>. Previously, I received an MS in Computer Science from <a href="https://www.missouristate.edu/" target="_blank">Missouri State University</a> and a BSEngg in Computer Science and Engineering from <a href="http://www.buet.ac.bd/" target="_blank">Bangladesh University of Engineering and Technology</a>. I have more than seven years of teaching experience at university level.
-                  <br><br>
-                  </p>
+                <p class="justify">I completed my PhD and MS in <a href="https://www.colorado.edu/cmci/infoscience" target="_blank">Information Science</a> from the University of Colorado Boulder, where I worked with <a href="https://www.colorado.edu/faculty/semaan/" target="_blank">Bryan Semaan</a>. Previously, I received an MS in Computer Science from <a href="https://www.missouristate.edu/" target="_blank">Missouri State University</a> and a BSEngg in Computer Science and Engineering from <a href="http://www.buet.ac.bd/" target="_blank">Bangladesh University of Engineering and Technology</a>. I have more than seven years of teaching experience at university level.
+                  <br>
+                </p>
 
-                  <div> 
-                    <p>
-                      <strong><a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a></strong>
-                    </p>
-                    <p>
-                      <strong><a href="files/cv/Resume.pdf" target="_blank">Click here to download my brief Resume</a></strong>
-                    </p>
-                  </div>
+                <!-- <div>
+                  <span style="margin-right: 100px;"><strong><a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a></strong></span><strong><a href="files/cv/Resume.pdf" target="_blank">Click here to download my brief Resume</a></strong>
+                </div> -->
+                <div style="display: flex; justify-content: space-between; align-items: center;">
+                  <strong><a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a></strong>
+                  <strong><a href="files/cv/Resume.pdf" target="_blank">Click here to download my brief Resume</a></strong>
+                </div>
 
                   <div>
+                    <br>
                     <ul class="list-inline list-social-icons mb-0">
                       <li class="list-inline-item">
                         <a href="mailto:dipto.das@utoronto.ca" target="_blank" aria-label="Email">
