--- a/index.html
+++ b/index.html
@@ -167,15 +167,22 @@
                           </span>
                         </a>
                       </li>
-                      <li class="list-inline-item">
+                      <!-- <li class="list-inline-item">
                         <a href="files/cv/CV.pdf" target="_blank" aria-label="CV">
                           <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
-                            <!-- <i aria-hidden="true" title="CV" class="fa fa-file-text fa-stack-1x fa-inverse"></i> -->
                             <i aria-hidden="true" title="CV" class="ai ai-cv fa-stack-2x fa-inverse"></i>
                           </span>
                         </a>
                       </li>
+                      <li class="list-inline-item">
+                        <a href="files/cv/Resume.pdf" target="_blank" aria-label="Resume">
+                          <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i aria-hidden="true" title="Resume" class="ai ai-cv fa-stack-2x fa-inverse"></i>
+                          </span>
+                        </a>
+                      </li> -->
                     </ul>
                   </div>
 
