--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a class="nav-link js-scroll-trigger" href="files/cv/CV.pdf" target="_blank">Curriculum Vitae &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="files/cv/Resume.pdf" target="_blank">Resume &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
+            <a class="nav-link js-scroll-trigger" href="files/cv/Resume.pdf" target="_blank">Résumé &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
           </li>
         </ul>
       </div>
@@ -113,7 +113,7 @@
                 </div> -->
                 <div style="display: flex; justify-content: space-between; align-items: center;">
                   <strong><a href="files/cv/CV.pdf" target="_blank">Click here to download my complete CV</a></strong>
-                  <strong><a href="files/cv/Resume.pdf" target="_blank">Click here to download my brief Resume</a></strong>
+                  <strong><a href="files/cv/Resume.pdf" target="_blank">Click here to download my brief Résumé</a></strong>
                 </div>
 
                   <div>
