--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-4">
-                <img class="img-fluid" src="img/onlinediscourse.png" alt="A visual representation of online communities." >
+                <img class="img-fluid" src="img/bsa_tool_audit.png" alt="A visual representation of audits of Bengali sentiment analysis tools." >
               </div>
               <div class="col-lg-8">
                 <h3 class="subheading mb-3 text-primary">Algorithmic fairness and bias in sociotechnical systems</h3>
                 <p class="justify">
-                  I examine how AI and platform pipelines—spanning large language models, moderation infrastructures, and downstream decision systems—encode identity-based harms. My work combines algorithmic audits, dataset curation, and culturally grounded evaluation to surface failure modes that standard benchmarks miss, especially in low-resource languages (e.g., Bengali) and Global South contexts. I analyze how data provenance, annotation rationales, developer positionality, and infrastructural choices shape what counts as "fair," producing diagnostic frameworks and actionable guidance for accountable deployment.
+                  I examine how AI and platform pipelines—spanning large language models, moderation infrastructures, and downstream decision systems—encode identity-based harms. My work combines algorithmic audits, dataset curation, and culturally grounded evaluation to surface failure modes that standard benchmarks miss, especially in low-resource languages (e.g., Bengali) and the Global South contexts. I analyze how data provenance, annotation rationales, developer positionality, and infrastructural choices shape what counts as "fair," producing diagnostic frameworks and actionable guidance for accountable deployment.
                   <br>
                   <br>
                   <strong>Reference papers:</strong> [<a href="files/papers/CSCW24_transnational.pdf" target="_blank">CSCW '24a</a>] [<a href="files/papers/CSCW24_minority.pdf" target="_blank">CSCW '24b</a>] [<a href="files/papers/CHI22_collaborative.pdf" target="_blank">CHI '22</a>] [<a href="files/papers/ICTD22_microcelebrity.pdf" target="_blank">ICTD '22</a>]
@@ -291,6 +291,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <img class="img-fluid" src="img/panoptic_platform.png" alt="A visual representation of panoptic governance on Quora." >
+                <!-- <img class="img-fluid" src="img/onlinediscourse.png" alt="A visual representation of online communities." > -->
               </div>
               <div class="col-lg-8">
                 <h3 class="subheading mb-3 text-primary">Culture, discourse, and power in global digital platforms</h3>
@@ -306,7 +307,7 @@
             <br>
             <div class="row">
               <div class="col-lg-4">
-                <img class="img-fluid" src="img/bsa_tool_audit.png" alt="A visual representation of audits of Bengali sentiment analysis tools." >
+                <img class="img-fluid" src="img/mod-guide.png" alt="A visual diagram of Mod-guide, a moderation feedback system." >
               </div>
               <div class="col-lg-8">
                 <h3 class="subheading mb-3 text-primary">Community-driven approaches to equitable and ethical AI</h3>
@@ -322,7 +323,7 @@
             <br>
             <div class="row">
               <div class="col-lg-4">
-                <img class="img-fluid" src="img/mod-guide.png" alt="A visual diagram of Mod-guide, a moderation feedback system." >
+                
               </div>
               <div class="col-lg-8">
                 <h3 class="subheading mb-3 text-primary">Computational Models to Support User Interaction</h3>
