--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
           <div class="container-fluid">
 
             <p class="justify">
-              Beyond research, I am deeply committed to decolonized and active learning-based pedagogy, with over seven years of experience teaching courses on user-centered design, social computing, statistics, programming, and computational reasoning at universities across Canada, the U.S., and Bangladesh. Outside of academia, I enjoy exploring the intersections of technology, culture, and storytelling through travel and photography.
+              Beyond research, I am deeply committed to decolonized and active learning-based pedagogy, with over seven years of experience teaching courses on user-centered design, social computing, statistics, programming, and computational reasoning at universities across Canada, the U.S., and Bangladesh.
             </p>
 
             <div class="subheading mb-3 text-primary">Instructor of Record
