--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
           <div class="container-fluid">
 
             <p class="justify">
-                Beyond research, I am deeply committed to <strong>active learning-based pedagogy</strong> in science, technology, engineering, and mathematics (STEM) education, with over <strong>seven years of experience teaching</strong> courses on <em>user-centered design, social computing, statistics, programming, and computational reasoning</em>  at universities across Canada, the U.S., and Bangladesh.
+                Beyond research, I am deeply committed to <strong>active learning-based pedagogy</strong> in science, technology, engineering, and mathematics (STEM) education, with <strong>over seven years of experience</strong> teaching courses on <em>user-centered design, social computing, statistics, programming, and computational reasoning</em>  at universities across Canada, the U.S., and Bangladesh.
             </p>
 
             <div class="subheading mb-3 text-primary">Instructor of Record
