--- a/index.html
+++ b/index.html
@@ -623,9 +623,7 @@
                         <a href="files/papers/CSCW21_governance.pdf" target="_blank">"Jol" or "Pani"?: How Does Governance Shape a Platform's Identity?</a> 
                         In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW '21)</em>. 
                         <br>
-                        <strong><i class="fa-solid fa-award"></i> Best Paper Honorable Mention</strong>
-                        <br>
-                        <strong><i class="fas fa-globe-americas"></i> Contribution to Diversity and Inclusion</strong>
+                        <strong><i class="fa-solid fa-award"></i> Best Paper Honorable Mention</strong>&nbsp;&nbsp;<strong><i class="fas fa-globe-americas"></i> Contribution to Diversity and Inclusion</strong>
                     </p>
                 </li>
                 <li>
@@ -708,7 +706,7 @@
           <div class="container-fluid">
 
             <p class="justify">
-                Beyond research, I am deeply committed to <strong>active learning-based pedagogy</strong> in science, technology, engineering, and mathematics (STEM) education, with <strong>over seven years of experience</strong> teaching courses on <em>user-centered design, social computing, statistics, programming, and computational reasoning</em>  at universities across Canada, the U.S., and Bangladesh.
+                Beyond research, I am deeply committed to <strong>active learning-based pedagogy</strong> in science, technology, engineering, and mathematics (STEM) education, with <strong>more than seven years of experience</strong> in teaching courses on <em>user-centered design, social computing, statistics, programming, and computational reasoning</em>  at universities across Canada, the U.S., and Bangladesh.
             </p>
 
             <div class="subheading mb-3 text-primary">Instructor of Record
