--- a/index.html
+++ b/index.html
@@ -552,6 +552,10 @@
                         <a href="files/papers/EACL23-C3NLP_bibed.pdf" target="_blank">Toward Cultural Bias Evaluation Datasets: The Case of Bengali Gender, Religious, and National Identity.</a> 
                         In <em>Proceedings of Workshop on Cross-Cultural Considerations in NLP at the European Chapter of the Association for Computational Linguistics (EACL-C3NLP '23)</em>.
                     </p>
+                    <span class="pub-meta d-none"
+                      data-type="full"
+                      data-methods="dataset,nlp">
+                    </span>
                 </li>
                 <li>
                     <p>
