--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                     <option value="">All types</option>
                     <option value="full">Full Paper (Journal/Conference Proceeding)</option>
                     <option value="short">Short Paper (Poster/Note/Doctoral Consortium)</option>
-                    <option value="workshop">Workshop Proposal</option>
+                    <option value="workshop">Workshop Organization Proposal</option>
                     <option value="unarchived">Position Paper (unarchived)</option>
                     <option value="under-review">Under Review/Pre-print</option>
                   </select>
@@ -584,20 +584,20 @@
                 </li>
                 <li>
                     <p>
-                        <strong>Dipto Das</strong>. 2023. <a href="files/posters/CSCW23_DC.pdf">Studying Multi-dimensional Marginalization of Identity from Decolonial and Postcolonial Perspectives.</a> In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '23).</em>
+                        <strong>Dipto Das</strong>. 2023. <a href="files/posters/CSCW23_DC.pdf">Studying Multi-dimensional Marginalization of Identity from Decolonial and Postcolonial Perspectives.</a> In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '23).</em> [Doctoral Consortium]
                     </p>
                     <span class="pub-meta d-none"
                       data-type="short"
-                      data-methods="audit,ethnography,interview,survey,online,nlp,qual,quant,mixed">
+                      data-methods="online,nlp,mixed">
                     </span>
                 </li>
                 <li>
                     <p>
-                        <strong>Dipto Das</strong>. 2023. <a href="files/posters/GROUP23_DC.pdf">Decolonization through Technology and Decolonization of Technology.</a> In <em>ACM International Conference on Supporting Group Work (GROUP '23).</em>
+                        <strong>Dipto Das</strong>. 2023. <a href="files/posters/GROUP23_DC.pdf">Decolonization through Technology and Decolonization of Technology.</a> In <em>ACM International Conference on Supporting Group Work (GROUP '23).</em> [Doctoral Consortium]
                     </p>
                     <span class="pub-meta d-none"
                       data-type="short"
-                      data-methods="audit,ethnography,interview,survey,online,nlp,qual,quant,mixed">
+                      data-methods="online,nlp,mixed">
                     </span>
                 </li>
                 <li>
