--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2018. <a href="files/posters/ICMI18_sarcasm.pdf">Sarcasm Detection on Facebook: A Supervised Learning Approach.</a> In <em>ACM International Conference on Multimodal Interaction (ICMI '18).</em>
                     </p>
                     <span class="pub-meta d-none"
-                      data-type="full"
+                      data-type="short"
                       data-methods="online,quant,mldl">
                     </span>
                 </li>
