--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                 </li>
                 <li>
                     <p>
-                        Mohammad Rashidujjaman Rifat, <strong>Dipto Das</strong>, Najmul Islam, and Syed Ishtiaque Ahmed. 2019. <a href="files/posters/HCIxB19_microcelebrity.pdf">Microcelebrities in Bangladesh.</a> In <em>HCI Across Borders and Intersections Workshop at the ACM CHI Conference on Human Factors in Computing Systems (CHI-HCIxB '19).</em> [Position paper]
+                        Mohammad Rashidujjaman Rifat, <strong>Dipto Das</strong>, Najmul Islam, and Syed Ishtiaque Ahmed. 2019. <a href="files/posters/HCIxB19_microcelebrity.pdf">Microcelebrities in Bangladesh.</a> In <em>HCI Across Borders and Intersections Workshop at the ACM CHI Conference on Human Factors in Computing Systems (CHI-HCIxB '19).</em>
                     </p>
                     <span class="pub-meta d-none"
                       data-type="unarchived"
@@ -803,7 +803,7 @@
                 </li>
                 <li>
                     <p>
-                        Md Fazlay Rabbi Masum Billah, <strong>Dipto Das</strong>, Imtiaz Karim, Shuha Nabila, and Arnob Paul. 2017. <a href="files/posters/NSysS17_cost.pdf">Cost-Efficient Smart Street Lighting System.</a> In <em>International Conference on Networking, Systems, and Security (NSysS '17).</em> [Poster]
+                        Md Fazlay Rabbi Masum Billah, <strong>Dipto Das</strong>, Imtiaz Karim, Shuha Nabila, and Arnob Paul. 2017. <a href="files/posters/NSysS17_cost.pdf">Cost-Efficient Smart Street Lighting System.</a> In <em>International Conference on Networking, Systems, and Security (NSysS '17).</em>
                     </p>
                     <span class="pub-meta d-none"
                       data-type="unarchived"
@@ -812,7 +812,7 @@
                 </li>
                 <li>
                     <p>
-                        Anurata Prabha Hridi, <strong>Dipto Das</strong>, Md Monowar Anjum, and Tanmay Das. 2016. <a href="files/posters/DEV16_evacuation.pdf">Faster Evacuation after Disaster: Finding Alternative Routes Using Probable Human Behavior.</a> In <em>ACM SIGCAS Annual Symposium on Computing for Development (DEV '16).</em> [Poster]
+                        Anurata Prabha Hridi, <strong>Dipto Das</strong>, Md Monowar Anjum, and Tanmay Das. 2016. <a href="files/posters/DEV16_evacuation.pdf">Faster Evacuation after Disaster: Finding Alternative Routes Using Probable Human Behavior.</a> In <em>ACM SIGCAS Annual Symposium on Computing for Development (DEV '16).</em>
                     </p>
                     <span class="pub-meta d-none"
                       data-type="short"
