--- a/index.html
+++ b/index.html
@@ -364,7 +364,6 @@
                     <option value="short">Short Paper (Poster/Note/Doctoral Consortium)</option>
                     <option value="workshop">Workshop Organization Proposal</option>
                     <option value="unarchived">Position Paper (unarchived)</option>
-                    <option value="under-review">Under Review/Pre-print</option>
                   </select>
                 </div>
                 <div class="col-12 col-md-4">
@@ -408,8 +407,8 @@
                     <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. <a href="files/papers/political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. Submitted.
                   </p>
                   <span class="pub-meta d-none"
-                    data-year="[n.d.]"
-                    data-type="under-review"
+                    data-year="under review"
+                    data-type="full"
                     data-methods="audit,nlp">
                   </span>
                 </li>
@@ -418,8 +417,8 @@
                     <strong>Dipto Das</strong>, Achhiya Sultana, Ankit Singh Chauhan, Saadia Binte Alam, Mohammad Shidujaman, Sunandan Chakraborty, and Syed Ishtiaque Ahmed. <a href="files/papers/Mod_Guide.pdf" target="_blank">Can LLM-based Content Moderation Identify Insensitive Speech toward Indigenous Ethnic and Religious Minorities?</a>. Submitted.    
                   </p>
                   <span class="pub-meta d-none"
-                    data-year="[n.d.]"
-                    data-type="under-review"
+                    data-year="under review"
+                    data-type="full"
                     data-methods="dataset,nlp,design,tool">
                   </span>
                 </li>
@@ -428,13 +427,12 @@
                     <strong>Dipto Das</strong>, Shion Guha, and Bryan Semaan. <a href="files/papers/BSAdatasets.pdf" target="_blank">How do datasets, developers, and models affect biases in a low-resourced language?</a>. Submitted.
                   </p>
                   <span class="pub-meta d-none"
-                    data-year="[n.d.]"
-                    data-type="under-review"
+                    data-year="under review"
+                    data-type="full"
                     data-methods="audit,nlp,survey,quant">
                   </span>
                 </li>
-
-                <!-- full papers: journal articles and conference proceedings -->
+                
                 <li>
                   <p>
                     <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. <a href="files/posters/BTPD.pdf" target="_blank">BTPD: A Multilingual Hand-curated Dataset of Bengali Transnational Political Discourse Across Online Communities</a>. In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '25).</em>
