--- a/index.html
+++ b/index.html
@@ -377,7 +377,6 @@
                     <option value="ethnography">Ethnography</option>
                     <option value="interview">Interview</option>
                     <option value="mldl">Machine Learning/Deep Learning</option>
-                    <option value="mixed">Mixed method Empirical</option>
                     <option value="nlp">Natural Language Processing</option>
                     <option value="online">Online Platforms</option>
                     <option value="qual">Qualitative Empirical</option>
@@ -448,7 +447,7 @@
                     </p>
                     <span class="pub-meta d-none"
                       data-type="full"
-                      data-methods="audit,nlp,mixed">
+                      data-methods="audit,nlp,qual,quant">
                     </span>
                   </li>
                   <li>
