--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                   I examine how AI and platform pipelines—spanning large language models, moderation infrastructures, and downstream decision systems—encode identity-based harms. My work combines algorithmic audits, dataset curation, and culturally grounded evaluation to surface failure modes that standard benchmarks miss, especially in low-resource languages (e.g., Bengali) and the Global South contexts. I analyze how data provenance, annotation rationales, developer positionality, and infrastructural choices shape what counts as "fair," producing diagnostic frameworks and actionable guidance for accountable deployment.
                   <br>
                   <br>
-                  <strong>Reference papers:</strong> [<a href="files/papers/CSCW24_transnational.pdf" target="_blank">CSCW '24a</a>] [<a href="files/papers/CSCW24_minority.pdf" target="_blank">CSCW '24b</a>] [<a href="files/papers/CHI22_collaborative.pdf" target="_blank">CHI '22</a>] [<a href="files/papers/ICTD22_microcelebrity.pdf" target="_blank">ICTD '22</a>]
+                  <!-- <strong>Example Reference papers:</strong> [<a href="files/papers/CHI24_audit.pdf" target="_blank">CHI '24</a>] [<a href="files/papers/CSCW21_governance.pdf" target="_blank">CSCW '21</a>] -->
                 </p>
               </div>
             </div>
@@ -299,7 +299,9 @@
                   I study how governance rules, recommendation logics, and moderation workflows configure civic identity, narrative agency, and visibility. Using trace ethnography, interviews, and computational analyses across platforms such as Quora, YouTube, and Facebook, I document tactics communities use to resist epistemic erasure and negotiate precarity. The findings translate into policy-aware design recommendations and regionally grounded safety interventions that protect marginalized voices and broaden participation beyond Western paradigms.
                   <br>
                   <br>
-                  <strong>Reference papers:</strong> [<a href="files/papers/CSCW25_migrants.pdf" target="_blank">CSCW '25</a>] [<a href="files/papers/CHI25_homelessness.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/JCSCW25_gig.pdf" target="_blank">JCSCW</a>] [<a href="files/papers/ICTD24_civics.pdf" target="_blank">ICTD '24</a>] [<a href="files/papers/CSCW21_governance.pdf" target="_blank">CSCW '21</a>] [<a href="files/papers/ICTD20_stigma.pdf" target="_blank">ICTD '20</a>]
+                  <!-- <strong>Example Reference papers:</strong> [<a href="files/papers/CSCW24_transnational.pdf" target="_blank">CSCW '24a</a>] [<a href="files/papers/CSCW24_minority.pdf" target="_blank">CSCW '24b</a>] [<a href="files/papers/CHI22_collaborative.pdf" target="_blank">CHI '22</a>] [<a href="files/papers/ICTD22_microcelebrity.pdf" target="_blank">ICTD '22</a>]
+                  
+                  [<a href="files/papers/CSCW25_migrants.pdf" target="_blank">CSCW '25</a>] [<a href="files/papers/CHI25_homelessness.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/JCSCW25_gig.pdf" target="_blank">JCSCW</a>] [<a href="files/papers/ICTD24_civics.pdf" target="_blank">ICTD '24</a>]  [<a href="files/papers/ICTD20_stigma.pdf" target="_blank">ICTD '20</a>] -->
                 </p>
               </div>
             </div>
@@ -315,7 +317,7 @@
                   I co-design models, tools, and evaluation pipelines with affected communities to center epistemic inclusion and restorative justice. This work includes sociolinguistic and affect-aware modeling and retrieval-augmented systems that support interpretive accountability in moderation and knowledge curation. Through participatory annotation and mixed-methods validation, I deliver datasets, protocols, and deployable tools that align technical performance with community needs and the lived realities of users.
                   <br>
                   <br>
-                  <strong>Reference papers:</strong> [<a href="files/papers/CHI25_language.pdf" target="_blank">CHI '25</a>] [<a href="files/papers/CHI24_audit.pdf" target="_blank">CHI '24</a>] [<a href="files/papers/EACL23-C3NLP_bibed.pdf" target="_blank">EACL '23 (C3NLP)</a>]
+                  <!-- <strong>Reference papers:</strong> [<a href="files/papers/CHI25_language.pdf" target="_blank">CHI '25</a>]  [<a href="files/papers/EACL23-C3NLP_bibed.pdf" target="_blank">EACL '23 (C3NLP)</a>] -->
                 </p>
               </div>
             </div>
