--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,13 @@
           </p>
           
           <a href="mailto:dipto.das@utoronto.ca" target="_blank">dipto [dot] das [at] utoronto [dot] ca</a>
-          <br>
+          <br><br><br><br><br><br>
+
+          <p style="font-size: 0.85rem">
+            Copyright &copy; <script>document.write(new Date().getFullYear())</script> Dipto Das.
+            Powered by <a href="https://startbootstrap.com/theme/resume" target="_blank">Start Bootstrap</a> from <a href="https://github.com/BlackrockDigital" target="_blank">Blackrock Digital</a>
+            and <a href="https://mattboldt.com/demos/typed-js/" target="_blank">Typed.js</a> from <a href="https://mattboldt.com/" target="_blank">Matt Boldt</a>.
+          </p>
         </div>
       </section>
     </div>
@@ -1204,7 +1210,7 @@
 })();
 </script>
 
-<script>
+<!-- <script>
   // Enable Bootstrap's ScrollSpy for dynamic active highlighting
   document.addEventListener('DOMContentLoaded', function () {
     const scrollSpy = new bootstrap.ScrollSpy(document.body, {
@@ -1222,7 +1228,9 @@
     Powered by <a href="https://startbootstrap.com/theme/resume" target="_blank">Start Bootstrap</a> from <a href="https://github.com/BlackrockDigital" target="_blank">Blackrock Digital</a>
     and <a href="https://mattboldt.com/demos/typed-js/" target="_blank">Typed.js</a> from <a href="https://mattboldt.com/" target="_blank">Matt Boldt</a>.
   </p>
-</footer>
+</footer> -->
+
+
 
   </body>
 
