--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                       Received postdoctoral fellowship from Institute for Pandemics at the University of Toronto!
                     </li>
                     <li class="term-item">
-                      <i class="fa-li fas fa-pen-nib"></i>
+                      <i class="fa-li fas fa-chalkboard-teacher"></i>
                       Invited talk at the University of Michigan.
                     </li>
                     <li class="term-item">
