--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="subheading mb-3 text-primary">Recent News</div>
                 	<ul class="fa-ul mb-0 term-list">
                     <li class="term-item">
-                      <i class="fa-li fas fa-award"></i>
+                      <i class="fa-li fas fa-trophy"></i>
                       Received postdoctoral fellowship from Institute for Pandemics at the University of Toronto!
                     </li>
                     <li class="term-item">
