--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
           <div class="container-fluid p-0">
 
             <p class="justify">
-                Beyond research, I am deeply committed to <strong>active learning-based pedagogy</strong> in science, technology, engineering, and mathematics (STEM) education, with <strong>more than seven years of experience</strong> in teaching courses on <em>user-centered design, social computing, statistics, programming, and computational reasoning</em>  at universities across Canada, the U.S., and Bangladesh.
+                Beyond research, I am deeply committed to <strong>active learning-based pedagogy</strong> in science, technology, engineering, and mathematics (STEM) education, with <strong>more than seven years of experience</strong> in teaching courses on <em>user-centered design, social computing, statistics, programming, and computational reasoning</em>  at universities across the US, Canada, and Bangladesh.
             </p>
 
             <div class="subheading mb-3 text-primary">Instructor of Record
