--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h1 class="mb-0">Dipto
             <span class="text-primary">Das</span>
           </h1>
-          <div class="subheading mb-3" aria-hidden="true" title="Researcher, Educator, Engineer">
+          <div class="subheading mb-3" aria-hidden="true" title="Researcher, Educator, Engineer">. 
           	<span class="typed" aria-hidden="true"></span>
           </div>
           <div class="row mb-5">
