--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </p>
 
                 <p class="justify">
-                  In my free time, I find joy in sharing meaningful moments with friends and family and studying mythologies. I greatly enjoy sketching and photography, often capturing moments from my travels. Cooking is another passion of mine as a way to experience different cultures.
+                  In my free time, I find joy in sharing meaningful moments with friends and family and studying mythologies. I also enjoy sketching and photography, often capturing moments from my travels. Cooking is another passion of mine as a way to experience different cultures.
                 </p>
 
                 
