--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Trebuchet+MS:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sarala:wght@300;400;700;900&family=Lora:wght@400;500;600;700&family=Comfortaa:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+
 
     <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
     <!-- <script src="https://kit.fontawesome.com/dae7af0921.js" crossorigin="anonymous"></script> -->
@@ -88,14 +95,15 @@
               <div class="subheading mb-3 text-primary">Name Pronunciation</div>
 	            	<p class="justify">
               		Dip-toh (Dipto) Daash (Das). Dipto means <em>bright</em> in Bengali. Play the audio below to listen to the pronunciation of my name.
-              		<br><br>
+              		<!-- <br> -->
               		<audio controls>
       	 						<source src="img/diptodas.mp3" type="audio/mpeg">
       						</audio>
-                  <br><br>Spelling in Bengali: দীপ্ত দাস
+                  <br>
+                  Spelling in Bengali: <span class="bn-name">দীপ্ত দাস</span>
 	              	<br>
 	              	Pronouns: He/him/his
-                  <br><br>
+                  <br>
 	              </p>
 
 
@@ -813,34 +821,38 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                Fall 2025: INFO 4609: User-Centered Design, University of Colorado Boulder
+                <strong>Winter 2026:</strong> CSC 300: Computers and Society, University of Toronto
               </li>
               <li>
-                Spring 2025: INFO 2301: Quantitative Reasoning, University of Colorado Boulder
+                <strong>Fall 2025:</strong> INFO 4609: User-Centered Design, University of Colorado Boulder
               </li>
               <li>
-                Spring 2025: INFO 1301: Statistics for Information Science, University of Colorado Boulder
+                <strong>Spring 2025:</strong>
+                  <ul class="mb-0" type="1" style="list-style-type:disc">
+                    <li>INFO 2301: Quantitative Reasoning, University of Colorado Boulder</li>
+                    <li>INFO 1301: Statistics for Information Science, University of Colorado Boulder</li>
+                  </ul>
               </li>
               <li>
-                Fall 2024: INFO 2301: Quantitative Reasoning, University of Colorado Boulder
+                <strong>Fall 2024:</strong>
+                  <ul class="mb-0" type="1" style="list-style-type:disc">
+                    <li>INFO 2301: Quantitative Reasoning, University of Colorado Boulder</li>
+                    <li>INFO 1301: Statistics for Information Science, University of Colorado Boulder</li>
+                  </ul>
               </li>
               <li>
-                Fall 2024: INFO 1301: Statistics for Information Science, University of Colorado Boulder
+                <strong>Spring 2024:</strong> INFO 4609: User-Centered Design, University of Colorado Boulder
               </li>
               <li>
-                Spring 2024: INFO 4609: User-Centered Design, University of Colorado Boulder
+                <strong>Spring 2023:</strong> INFO 1301: Statistics for Information Science, University of Colorado Boulder
               </li>
               <li>
-                Spring 2023: INFO 1301: Statistics for Information Science, University of Colorado Boulder
-              </li>
-              <li>
-                Fall 2017: CSE 401: Compiler Design, Dhaka International University
-              </li>
-              <li>
-                Fall 2017: CSE 301: Algorithm Design and Analysis, Dhaka International University
-              </li>
-              <li>
-                Fall 2017: CSE 209: Computer Organization and Architecture, Dhaka International University
+                <strong>Fall 2017:</strong>
+                  <ul class="mb-0" type="1" style="list-style-type:disc">
+                    <li>CSE 401: Compiler Design, Dhaka International University</li>
+                    <li>CSE 301: Algorithm Design and Analysis, Dhaka International University</li>
+                    <li>CSE 209: Computer Organization and Architecture, Dhaka International University</li>
+                  </ul>
               </li>
             </ul>
 
@@ -850,40 +862,41 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                Fall 2023: INFO 1111: Understanding the World Through Data, University of Colorado Boulder
+                <strong>Fall 2023:</strong> INFO 1111: Understanding the World Through Data, University of Colorado Boulder
               </li>
               <li>
-                Fall 2022: INFO 1301: Statistics for Information Science, University of Colorado Boulder
+                <strong>Fall 2022:</strong> INFO 1301: Statistics for Information Science, University of Colorado Boulder
               </li>
               <li>
-                Spring 2022: INFO 1201: Computational Reasoning, University of Colorado Boulder
+                <strong>Spring 2022:</strong> INFO 1201: Computational Reasoning, University of Colorado Boulder
               </li>
               <li>
-                Fall 2021: INFO 1201: Computational Reasoning, University of Colorado Boulder
+                <strong>Fall 2021:</strong> INFO 1201: Computational Reasoning, University of Colorado Boulder
               </li>
               <li>
-                Spring 2021: IST 300: Digital Platforms, Syracuse University
+                <strong>Spring 2021:</strong> IST 300: Digital Platforms, Syracuse University
               </li>
               <li>
-                Fall 2020: IST 421: Information Visualization, Syracuse University
+                <strong>Fall 2020:</strong> IST 421: Information Visualization, Syracuse University
               </li>
               <li>
-                Spring 2020: IST 343: Data in Society, Syracuse University
+                <strong>Spring 2020:</strong> IST 343: Data in Society, Syracuse University
               </li>
               <li>
-                Fall 2019: IST 649: Human Interaction with Computers, Syracuse University
+                <strong>Fall 2019:</strong> IST 649: Human Interaction with Computers, Syracuse University
               </li>
               <li>
-                Spring 2019: CSC 130: The World of Computer Science, Missouri State University
+                <strong>Spring 2019:</strong>
+                  <ul class="mb-0" type="1" style="list-style-type:disc">
+                    <li>CSC 130: The World of Computer Science, Missouri State University</li>
+                    <li>CSC 131: Computational Thinking, Missouri State University</li>
+                  </ul>
               </li>
               <li>
-                Spring 2019: CSC 131: Computational Thinking, Missouri State University
+                <strong>Fall 2018:</strong> CSC 130: The World of Computer Science, Missouri State University
               </li>
               <li>
-                Fall 2018: CSC 130: The World of Computer Science, Missouri State University
-              </li>
-              <li>
-                Spring 2018: CSC 131: Computational Thinking, Missouri State University
+                <strong>Spring 2018:</strong> CSC 131: Computational Thinking, Missouri State University
               </li>
             </ul>
           </div>
